# podcast_adblock

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Makefile  main.py  pyproject.toml
.github/workflows/: main.yml
app/: __init__.py
app/core/: __init__.py  episode.py
app/infrastructure/: __init__.py  downloader.py  rss.py  storage.py
app/ingest/: __init__.py  rss.py
app/ml/features/: base.py
app/ml/models/: base.py
app/services/: __init__.py  episode_service.py
